--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[[bin]]
+name = "channels"
+path = "src/bin/example2.rs"
+
+
 [dependencies]
