--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,13 @@ path = "src/bin/example2.rs"
 name = "ownership"
 path = "src/bin/example3.rs"
 
+[[bin]]
+name = "barbero"
+path = "src/bin/barbero.rs"
+
+[[bin]]
+name = "fumadores"
+path = "src/bin/fumadore.rs"
+
 
 [dependencies]
